# chat-base-starter

./: .gitignore  README.ko.md  README.md  docker-compose.monitoring.yml  docker-compose.yml
aegra-service/: .dockerignore  .env.example  Dockerfile  README.md  aegra.json  docker-compose.yml  pyproject.toml  pyrightconfig.json
aegra-service/src/react_agent/: __init__.py  context.py  graph.py  prompts.py  state.py  tools.py  utils.py
aegra-service/tests/unit/: test_context.py  test_graph.py  test_tools.py
api-gateway/: .env.example  pom.xml
api-gateway/src/main/resources/: application.yml
chat-service/: .env.example  pyrightconfig.json  requirements.txt
chat-service/app/: auth.py  database.py  main.py  models.py  schemas.py
chat-service/app/routers/: chat.py
chat-service/app/services/: aegra_client.py  chat_service.py
disclosure-service/: .env.example
disclosure-service/app/: database.py
docker/postgres/: .env.example
docker/postgres/init/: 01-init-multiple-dbs.sh
frontend/: Dockerfile  docker-entrypoint.sh  index.html  package-lock.json  package.json
frontend/src/: App.jsx  config.js
frontend/src/api/: axios.js  chat.js  companies.js
frontend/src/components/: Navbar.jsx
frontend/src/pages/: Chat.jsx
monitoring/grafana/provisioning/dashboards/files/: enhanced-logs-explorer.json  request-tracer.json
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: promtail-config.yml
user-service/: .env.example  pom.xml
user-service/src/main/resources/: application.yml
(+4 files in other folders)
